feat: added support for open telemetry / open ai

--- a/api/package.json
+++ b/api/package.json
@@ -46,6 +46,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.52.0",
     "@opentelemetry/sdk-node": "^0.52.0",
     "@traceloop/instrumentation-langchain": "^0.8.6",
+    "@traceloop/instrumentation-openai": "^0.8.8",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
